--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
-DATABASE_URL=mongodb+srv://new_project:new_project@cluster0.ekvked7.mongodb.net/first_project?retryWrites=true&w=majority
+NODE_ENV=development
 PORT=5000
+# DATABASE_URL=mongodb+srv://new_project:new_project@cluster0.ekvked7.mongodb.net/first_project?retryWrites=true&w=majority
+DATABASE_URL=mongodb://localhost:27017/ecommerce
