--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
 NODE_ENV=development
 PORT=5000
 # DATABASE_URL=mongodb+srv://new_project:new_project@cluster0.ekvked7.mongodb.net/first_project?retryWrites=true&w=majority
-DATABASE_URL=mongodb://localhost:27017/ecommerce
+DATABASE_URL=mongodb://localhost:27017/university-management
+SALT_ROUND=12
+DEFAULT_PASSWORD=universitymanagement12!#
