--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-NODE_ENV=development
+# NODE_ENV=development
+NODE_ENV=production
 PORT=5000
 # DATABASE_URL=mongodb+srv://new_project:new_project@cluster0.ekvked7.mongodb.net/first_project?retryWrites=true&w=majority
 DATABASE_URL=mongodb+srv://university-management:university-management@cluster0.ekvked7.mongodb.net/university-management?retryWrites=true&w=majority
