--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.18.2",
     "http-errors": "^2.0.0",
     "http-status": "^1.7.3",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.1",
     "zod": "^3.22.4"
   },
@@ -33,6 +34,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.16",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
     "@typescript-eslint/eslint-plugin": "^6.11.0",
     "@typescript-eslint/parser": "^6.11.0",
     "eslint": "^8.53.0",
