--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.41.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -28,6 +29,7 @@
     "http-status": "^1.7.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.1",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.7",
     "zod": "^3.22.4"
   },
@@ -38,6 +40,7 @@
     "@types/cors": "^2.8.16",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/multer": "^1.4.11",
     "@types/nodemailer": "^6.4.14",
     "@typescript-eslint/eslint-plugin": "^6.11.0",
     "@typescript-eslint/parser": "^6.11.0",
